python/ply_try/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> line
Rule 1     line -> fields
Rule 2     line -> fields NEWLINE
Rule 3     fields -> field
Rule 4     fields -> field TAB fields
Rule 5     field -> FIELD

Terminals, with rules where they appear

FIELD                : 5
NEWLINE              : 2
TAB                  : 4
error                : 

Nonterminals, with rules where they appear

field                : 3 4
fields               : 1 2 4
line                 : 0

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . fields
    (2) line -> . fields NEWLINE
    (3) fields -> . field
    (4) fields -> . field TAB fields
    (5) field -> . FIELD

    FIELD           shift and go to state 4

    line                           shift and go to state 1
    fields                         shift and go to state 2
    field                          shift and go to state 3

state 1

    (0) S' -> line .



state 2

    (1) line -> fields .
    (2) line -> fields . NEWLINE

    $end            reduce using rule 1 (line -> fields .)
    NEWLINE         shift and go to state 5


state 3

    (3) fields -> field .
    (4) fields -> field . TAB fields

    NEWLINE         reduce using rule 3 (fields -> field .)
    $end            reduce using rule 3 (fields -> field .)
    TAB             shift and go to state 6


state 4

    (5) field -> FIELD .

    TAB             reduce using rule 5 (field -> FIELD .)
    NEWLINE         reduce using rule 5 (field -> FIELD .)
    $end            reduce using rule 5 (field -> FIELD .)


state 5

    (2) line -> fields NEWLINE .

    $end            reduce using rule 2 (line -> fields NEWLINE .)


state 6

    (4) fields -> field TAB . fields
    (3) fields -> . field
    (4) fields -> . field TAB fields
    (5) field -> . FIELD

    FIELD           shift and go to state 4

    field                          shift and go to state 3
    fields                         shift and go to state 7

state 7

    (4) fields -> field TAB fields .

    NEWLINE         reduce using rule 4 (fields -> field TAB fields .)
    $end            reduce using rule 4 (fields -> field TAB fields .)

